<resources>
    <string name="app_name">oldpeople</string>

    <!-- Strings related to login -->
    <string name="login_page_name">登陆</string>
    <string name="user_name_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="save_user">记住密码</string>
    <string name="login_in">@string/login_page_name</string>
    <!-- Strings related to main -->
    <string name="main_page_name">首页</string>


    <string name="ask_normal">问诊</string>
    <string name="physicals_normal">体检</string>

    <string name="blood_pressure">血压计</string>
    <string name="electrocardio">心电仪</string>
    <string name="blood_oxygen">血氧</string>
    <string name="blood_glucose">血糖仪</string>
    <string name="body_fat">体脂</string>
    <string name="animal_heat">体温</string>

    <string name="no_net">当前网络异常,请检查网络设置</string>
    <string name="open_set">打开设置</string>

    <string name="device_disconnetion">设备已断开</string>

    <string name="heat_permission_err">授权失败,将无法正常连接设备!</string>

    <string name="permission_err_title">位置信息权限</string>
    <string name="permission_err_msg">获取权限失败, 请到\"应用信息-权限管理\"中手动设置</string>
    <string name="permission_err_btn_confirm">确定</string>

    <string name="entry_text">手动录入</string>
    <string name="normal_str">正常</string>
    <string name="low_str">偏低</string>
    <string name="high_str">偏高</string>
    <string name="bluetooth_state_close">蓝牙未开启</string>
    <string name="bluetooth_state_lineing">正在连接...</string>
    <string name="chart_no_data">当前没有体征数据.</string>
    <string name="xietang_time">测量段</string>

    <string name="fat_save">保存</string>
    <string name="hand_action_title">手动录入</string>
    <string name="read_data_success">数据读取成功</string>
</resources>
